@@ -586,6 +586,19 @@ ecc_change(void *data       __UNUSED__,
 }
 
 static void
+ac_change(void *data       __UNUSED__,
+          Evas_Object     *obj,
+          void *event_info __UNUSED__)
+{
+   Eina_Bool val = elm_check_state_get(obj);
+   Eina_Bool ac = elm_config_access_get();
+
+   if (val == ac) return;
+   elm_config_access_set(val);
+   elm_config_all_flush();
+}
+
+static void
 _status_basic(Evas_Object *win,
               Evas_Object *bx0)
 {
@@ -732,6 +745,14 @@ _cf_caches(void            *data,
            void *event_info __UNUSED__)
 {
    _flip_to(data, "caches");
+}
+
+static void
+_cf_access(void            *data,
+           Evas_Object *obj __UNUSED__,
+           void *event_info __UNUSED__)
+{
+   _flip_to(data, "access");
 }
 
 const char *
@@ -1215,6 +1236,33 @@ _status_config_sizing(Evas_Object *win,
    evas_object_smart_callback_add(sl, "delay,changed", fs_change, NULL);
 
    evas_object_data_set(win, "sizing", bx);
+
+   elm_naviframe_item_simple_push(naviframe, bx);
+}
+
+static void
+_status_config_access(Evas_Object *win,
+                      Evas_Object *naviframe)
+{
+   Evas_Object *bx, *ck;
+
+   bx = elm_box_add(win);
+   evas_object_size_hint_weight_set(bx, EVAS_HINT_EXPAND, 0.0);
+   evas_object_size_hint_align_set(bx, EVAS_HINT_FILL, 0.5);
+
+   ck = elm_check_add(win);
+   elm_object_tooltip_text_set(ck, "Set access mode");
+   elm_object_text_set(ck, "Enable Access Mode");
+   evas_object_data_set(win, "access_check", ck);
+   evas_object_size_hint_weight_set(ck, EVAS_HINT_EXPAND, 0.0);
+   evas_object_size_hint_align_set(ck, EVAS_HINT_FILL, 0.5);
+   elm_check_state_set(ck, elm_config_access_get());
+   elm_box_pack_end(bx, ck);
+   evas_object_show(ck);
+
+   evas_object_smart_callback_add(ck, "changed", ac_change, NULL);
+
+   evas_object_data_set(win, "access", bx);
 
    elm_naviframe_item_simple_push(naviframe, bx);
 }
@@ -2997,6 +3045,7 @@ _status_config_full(Evas_Object *win,
    elm_toolbar_item_append(tb, "video-display", "Rendering",
                            _cf_rendering, win);
    elm_toolbar_item_append(tb, "appointment-new", "Caches", _cf_caches, win);
+   elm_toolbar_item_append(tb, "stock_spellcheck", "Access", _cf_access, win);
 
    elm_box_pack_end(bx0, tb);
    evas_object_show(tb);
@@ -3013,6 +3062,7 @@ _status_config_full(Evas_Object *win,
    _status_config_scrolling(win, naviframe);
    _status_config_caches(win, naviframe);
    _status_config_sizing(win, naviframe);
+   _status_config_access(win, naviframe);
 
    // FIXME uncomment after flip style fix, please
    //elm_object_style_set(naviframe, "flip");
